tools/sparkbox/deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sparkbox-poc
  labels:
    app.kubernetes.io/name: sparkbox
    app.kubernetes.io/part-of: sparky
