tools/sparkbox/deploy/kubernetes/internal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sparkbox-gateway
  namespace: sparkbox-poc
  labels:
    app.kubernetes.io/name: sparkbox
    app.kubernetes.io/component: gateway
    app.kubernetes.io/part-of: sparky
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sparkbox
    app.kubernetes.io/component: gateway
  ports:
    - name: node-link
      protocol: TCP
      port: 2222
      targetPort: ssh
